src/components/AppQuoteDetailPage/index.scss
@import '~@ergeon/core-components/src/components/variables.scss';

.quote-detail-page {
  .page-break {
    @media print {
      margin-top: $v-24;
      page-break-before: always !important;
    }
  }

  .card {
    background-color: white;
    &.padding-40 {
      @include phone() {
        padding: $h-20;
      }
    }
  }

  .quote-details {
    @include phone() {
      padding: $h-20;
      margin: 0 auto;
    }
  }

  .quote-labels-map {
    position: relative;
    width: 100%;

    &__content {
      opacity: 0;
    }

    .loaderWrapper {
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
    }

    .Map {

      .MapContent {
        &,
        > * {
          min-height: 300px;
          height: 100%;
        }
      }
    }
  }

  .quote-details-wrapper {
    margin-right: $h-40;
    width: 460px;
    min-width: 460px;
    @include tablet() {
      min-width: unset;
      width: 100%;
      margin-right: unset;
    }
    @include phone() {
      min-width: unset;
      width: 100%;
      margin: 0 0 $v-12 0;
    }
    @media print {
      min-width: unset;
      width: 100%;
      margin-right: unset;
    }
  }

  .quote-fields {
    border-top: 1px solid $gray-4;
    border-bottom: 1px solid $gray-4;
    padding: $v-12 0;
  }

  .quote-line {
    page-break-inside: avoid;
    border-bottom: 1px solid $gray-5;
    padding-bottom: $v-24;
    margin-top: $v-24;
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    @include phone() {
      flex-direction: column;
    }
    &__title {
      display: flex;
    }
  }

  .quote-line-preview {
    margin-top: 0;
    @include tablet() {
      margin-bottom: $v-12;
    }
    @include phone() {
      margin-bottom: $v-12;
    }
    @media print {
      margin-right: 20px;
    }

  }

  .quote-line-description {
    width: 100%;
    word-break: break-word;
    white-space: pre-line;
  }

  .quote-line-price {
    min-width: $h-120;
    text-align: right;
  }

  .total-price {
    position: relative;
    margin-top: $v-24;
    text-align: right;
    &:after {
      content: '*';
      color: $red;
      position: absolute;
      top: -6px;
      font-size: $font-label-size;
    }
  }

  .asterisk {
    color: $red;
    margin-left: $h-5;
  }

  .asterisk-notes {
    text-align: right;
    font-size: $font-label-size;
  }

  .mobile-length {
    display: none;

    @include tablet() {
      display: block;
    }
  }

  .desktop-length {
    display: block;

    @include tablet() {
      display: none;
    }
  }

  .quote-notes {
    p, ul, ol {
      max-width: 720px;
    }
    h4 {
      margin-bottom: $v-12;
    }
    @include phone() {
      padding: $h-20;
      margin: 0 auto;
    }
  }

  .quote-projects-notes {
    p {
      margin-bottom: $v-12;
    }
    // TODO: reuse ul, li style from core-components
    ul {
      padding-left: $v-24;
      list-style: none;

      > li {
        margin-bottom: $v-12;
        position: relative;
        &:before {
          content: "";
          width: $v-12;
          height: $v-12;
          position: absolute;
          left: (-$v-24 / 2 - $v-16 / 2);
          top: ($v-24 / 2 - $v-16 / 2);
          background-repeat: no-repeat;
          background-image: url('../../assets/icon-check-mark.svg');
          background-size: $v-12 $v-12;
          display: block;
        }
      }
    }
  }

  .quote-design-notes {
    &__title {
      font-family: $font-title;
      font-weight: 500;
      font-size: $h4-size;
      color: $black-1;
      line-height: $h4-line-height;
      margin: 0 0 12px;
    }

    &__content {
      display: flex;
      flex-wrap: wrap;
      justify-content: space-between;

      &-item {
        width: calc(50% - 10px);
        margin-bottom: 18px;
        border-radius: 4px;
        page-break-before: auto;
        page-break-after: auto;
        page-break-inside: avoid;
      }

      @include phone() {
        display: block;

        .quote-design-notes__content-item {
          width: 100%;
        }
      }
    }

    &__img {
      display: flex;
      align-items: center;
      width: 100%;
      max-height: 240px;
      overflow: hidden;
      border-radius: 4px;

      img {
        width: 100%;
        filter: contrast(1.3);
      }
    }

    &__name {
      font-weight: 700;
      margin: 18px 0 6px;
    }
  }

  .button-back {
    padding-left: 0 !important;
    padding-right: 10px;
    &:hover {
      background-color: $gray-5 !important;
    }
  }

  .gray-arrow-fill {
    width: 24px;
    height: 24px;
    display: flex;
    align-items: center;
    justify-content: center;
    svg {
      width: 12px;
      height: 12px;
      path {
        fill: $gray-1;
      }
    }
  }
}

@media print {
  * {
    /*
      The following lines forces browser to showcase background-images.
      Without it, the Ergeon logo won't be visible. We can change logo
      implementation to be an image and remove it in future.
    */
    -webkit-print-color-adjust: exact !important;
    color-adjust: exact !important;
  }
  body {
    zoom: 90%;
  }

  img {
    max-width: 100% !important;
    page-break-inside: avoid;
  }

  .card {
    border: none !important;
    padding: 0;
    &.padding-40 {
      padding-bottom: 0 !important;
    }
  }

  .customer-app-layout {
    margin-top: 0;
    padding: 0;
  }

  .wrapper-980 {
    padding-left: 0;
    padding-right: 0;
    .phone-number {
      margin-right: 0;
    }
  }

  .quote-details {
    padding: 0;
    margin-bottom: 0 !important;
  }

  .quote-details-wrapper {
    width: 50% !important;
    min-width: 50% !important;
  }

  .quote-details__description {
    position: relative !important;
    margin: 0 !important;
    padding: 0 !important;
  }

  .quote-labels-map {
    width: 47% !important;
    height: 100% !important;
    position: absolute !important;
    right: 0;
  }

  .customer-app-data-row > div:first-child {
    text-align: right;
    margin-right: 10px;
  }
}

